article & brief shares link fix

--- a/mainsite/templates/include_article_shares.html
+++ b/mainsite/templates/include_article_shares.html
@@ -30,7 +30,7 @@
 {#                    <i class="fa fa-print" aria-hidden="true"></i>#}
 {#                </a>#}
 
-                <a href="/print-article/?art={{ article.id }}" target="_blank"><i class="fa fa-print" aria-hidden="true"></i></a>
+                <a href="/en/print-article/?art={{ article.id }}" target="_blank"><i class="fa fa-print" aria-hidden="true"></i></a>
 
 
 {#            {% endwith %}#}
