--- a/mainsite/templates/include_brief_shares.html
+++ b/mainsite/templates/include_brief_shares.html
@@ -18,4 +18,4 @@
 {#    <i class="fa fa-print" aria-hidden="true"></i>#}
 {#</a>#}
 
-<a href="/print-article/?art={{ article.id }}" target="_blank"><i class="fa fa-print" aria-hidden="true"></i></a>
+<a href="/en/print-brief/?art={{ article.id }}" target="_blank"><i class="fa fa-print" aria-hidden="true"></i></a>
