misc JD Changes

--- a/mainsite/static/jpt/css/_content.scss
+++ b/mainsite/static/jpt/css/_content.scss
@@ -370,6 +370,7 @@
 .articleBodyText {
   img {
     margin:             0 auto;
+    padding:            0 10px 10px 10px;
   }
 }
 .articleShares {
