--- a/mainsite/static/jpt/css/mainstyle.css
+++ b/mainsite/static/jpt/css/mainstyle.css
@@ -540,7 +540,8 @@ a {
   padding-right: 0; }
 
 .articleBodyText img {
-  margin: 0 auto; }
+  margin: 0 auto;
+  padding: 0 10px 10px 10px; }
 
 .articleShares {
   font-size: 18px; }
@@ -1461,6 +1462,9 @@ table {
 .bloglist .sideListTitle {
   font-size: 18px;
   font-weight: 700; }
+
+.promolink {
+  color: black; }
 
 /* =================================================================== */
 /* AD ZONES
