--- a/spe_promotions/templates/spe_promotions/plugins/image_text_below.html
+++ b/spe_promotions/templates/spe_promotions/plugins/image_text_below.html
@@ -3,7 +3,7 @@
 {% for promo in promos %}
     <article class="tile whiteback story{% if not article.published %} unpublished{% endif %}{% if article.future %} future{% endif %} dontPrintMe"
                 style="min-height: 150px">
-    <a href="{{ promo.url }}">
+    <a href="{{ promo.url }}" class="promolink">
         <div class="story-wrap row">
             {% if promo.picture and promo.picture.url %}
                 <figure class="thumb col-sm-12 fullThumb">
