Hide Adpseed if Local
And misc css fixes

--- a/mainsite/templates/plugins/adspeed_zone_plugin.html
+++ b/mainsite/templates/plugins/adspeed_zone_plugin.html
@@ -7,10 +7,12 @@
 {#{% else %}#}
 {#    No instance passed#}
 {#{% endif %}#}
-{% if instance %}
-<div class="tile-adspeed text-center">
-    <!-- AdSpeed.com Tag 8.0.2 [Any Dimension] Real test number: 75028 -->
-    <script type="text/javascript" src="//g.adspeed.net/ad.php?do=js{% if instance.aid %}&aid={{ instance.aid }}{% endif %}{% if instance.zid %}&zid={{ instance.zid }}{% endif %}&wd=-1&ht=-1&target=_blank{% if instance.num %}&num={{ instance.num }}{% endif %}{% if not instance.show_errors %}&noerror=1{% endif %}"></script>
-    <!-- AdSpeed.com End -->
-</div>
+{% if variables.HIDE_ADSPEED == False %}
+    {% if instance %}
+    <div class="tile-adspeed text-center">
+        <!-- AdSpeed.com Tag 8.0.2 [Any Dimension] Real test number: 75028 -->
+        <script type="text/javascript" src="//g.adspeed.net/ad.php?do=js{% if instance.aid %}&aid={{ instance.aid }}{% endif %}{% if instance.zid %}&zid={{ instance.zid }}{% endif %}&wd=-1&ht=-1&target=_blank{% if instance.num %}&num={{ instance.num }}{% endif %}{% if not instance.show_errors %}&noerror=1{% endif %}"></script>
+        <!-- AdSpeed.com End -->
+    </div>
+    {% endif %}
 {% endif %}
