--- a/mainsite/static/jpt/css/mainstyle.css
+++ b/mainsite/static/jpt/css/mainstyle.css
@@ -541,7 +541,7 @@ a {
 
 .articleBodyText img {
   margin: 0 auto;
-  padding: 0 10px 10px 10px; }
+  padding: 10px; }
 
 .articleShares {
   font-size: 18px; }
