Print Title on Membership Promotions

--- a/spe_promotions/templates/spe_promotions/plugins/membership_carousel.html
+++ b/spe_promotions/templates/spe_promotions/plugins/membership_carousel.html
@@ -23,7 +23,7 @@
                   <div class="item active" style="background-image:url({{ promo.picture.url }});">
                       <a href="{{ promo.url }}" target="_blank">
                           <div class="carousel-caption">
-                              <h3>{{ promo.title }}</h3>
+                              <h3>{{ promo.promotion_title }}</h3>
                               <h4>{{ promo.teaser | safe }}</h4>
                           </div>
                       </a>
@@ -32,7 +32,7 @@
                   <div class="item" style="background-image:url({{ promo.picture.url }});">
                       <a href="{{ promo.url }}">
                           <div class="carousel-caption">
-                              <h3>{{ promo.title }}</h3>
+                              <h3>{{ promo.promotion_title }}</h3>
                               <h4>{{ promo.teaser | safe }}</h4>
                           </div>
                       </a>
