--- a/mainsite/static/www/css/mainstyle.scss
+++ b/mainsite/static/www/css/mainstyle.scss
@@ -103,3 +103,7 @@ h3 {
   font-size:          20px;
   font-weight:        $font-bold;
 }
+h4 {
+  font-size:          16px;
+  font-weight:        $font-bold;
+}
