--- a/mainsite/templates/print_base.html
+++ b/mainsite/templates/print_base.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>{% block title %}This is my new project home page{% endblock title %} - {% render_block "title2" %}</title>
+    <title>{% block title %}{% endblock title %} {% render_block "title2" %}</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
 
 	<link rel="shortcut icon" href="http://www.spe.org/assets/images/favicon.ico" type="image/x-icon">
