--- a/spe_promotions/templates/spe_promotions/plugins/promotion_posts.html
+++ b/spe_promotions/templates/spe_promotions/plugins/promotion_posts.html
@@ -23,8 +23,15 @@
             </div>
             </a>
         </div>
+
+
+        {% if show_all_url and show_all_text %}
+                    <div class="row"><div class="col-xs-12 see-all-div"><a class="see-all" id="features" href="{{ show_all_url }}">{{ show_all_text }}<span></span><i class="fa fa-chevron-circle-right" aria-hidden="true"></i></a></div></div>
+        {% endif %}
+
+
     {% empty %}
-        <p class="well">{% trans "No promotions available" %}</p>
+        <p class="well">{% trans "No items available" %}</p>
     {% endfor %}
 
     </div>
