--- a/mainsite/static/www/css/_tiles.scss
+++ b/mainsite/static/www/css/_tiles.scss
@@ -526,3 +526,11 @@
     font-weight:  $font-regular;
   }
 }
+
+.promolink {
+  color:          $col-black;
+
+  &:hover {
+    color:        $col-speblue;
+  }
+}
