--- a/mainsite/static/www/css/mainstyle.scss
+++ b/mainsite/static/www/css/mainstyle.scss
@@ -107,3 +107,21 @@ h4 {
   font-size:          16px;
   font-weight:        $font-bold;
 }
+.see-all-div {
+  margin:             15px 0;
+  padding:            10px 0 0 10px;
+  border-top:         1px solid $col-steelgrey;
+}
+.see-all {
+  font-size:          15px;
+  font-weight:        $font-bold;
+  color:              $col-speblue;
+
+  &:hover {
+    color:            $col-speblue;
+  }
+
+  i {
+    margin-left:      25px;
+  }
+}
