--- a/spe_promotions/templates/spe_promotions/plugins/promotion_posts.html
+++ b/spe_promotions/templates/spe_promotions/plugins/promotion_posts.html
@@ -24,16 +24,13 @@
             </a>
         </div>
 
-
-        {% if show_all_url and show_all_text %}
-                    <div class="row"><div class="col-xs-12 see-all-div"><a class="see-all" id="features" href="{{ show_all_url }}">{{ show_all_text }}<span></span><i class="fa fa-chevron-circle-right" aria-hidden="true"></i></a></div></div>
-        {% endif %}
-
-
     {% empty %}
         <p class="well">{% trans "No items available" %}</p>
     {% endfor %}
-
+{#        <div class="row"><div class="col-xs-12 see-all-div">MORE WHOBIE</div></div>#}
+        {% if more_url and more_text %}
+                    <div class="row"><div class="col-xs-12 see-all-div"><a class="see-all" id="features" href="{{ more_url }}">{{ more_text }}<span></span><i class="fa fa-chevron-circle-right" aria-hidden="true"></i></a></div></div>
+        {% endif %}
     </div>
 {% endif %}
 
