Advetizing link & New Brief of Interest Template

--- a/mainsite/templates/include_www_header.html
+++ b/mainsite/templates/include_www_header.html
@@ -198,8 +198,8 @@
                                 <div class="nav-col col-sm-6 col-md-2">
                                     <ul>
                                         <li class="heading">ADVERTISERS</li>
-                                        <li><a href="http://www.spe.org/sales/publications.php"></a>Advertising Information</li>
-                                        <li><a href="http://www.spe.org/sales/mediaguide/"></a>Advertising Rates</li>
+                                        <li><a href="http://www.spe.org/sales/publications.php">Advertising Information</a></li>
+                                        <li><a href="http://www.spe.org/sales/mediaguide/">Advertising Rates</a></li>
                                     </ul>
                                 </div>
                                 <div class="see-all col-xs-12">
