SPE News links color fix

--- a/mainsite/static/www/css/_vars.scss
+++ b/mainsite/static/www/css/_vars.scss
@@ -25,7 +25,8 @@ $col-speblue:     #26416c;
 $col-bluegrey:    #646e93;
 $col-speblue2:    #365d98;
 $col-suprdrkblue: #1c1d22;
-$col-hoverblue:   #105cd0;
+$col-hoverblue:   #337ab7;
+//$col-hoverblue:   #105cd0;
 
 /* Socials */
 $col-fbShare:     #3B5998;
