--- a/mainsite/static/www/css/inline.css
+++ b/mainsite/static/www/css/inline.css
@@ -5,8 +5,21 @@
 /* Fonts */
 /* Misc */
 /* Images */
-.wwwInLineBox { font-family: "Open Sans", sans-serif; background-color: #e7e7e7; padding: 15px; margin: 20px 0; }
-.wwwInLineBox h3 { padding: 0 0 15px 0; margin: 0 0 15px 0; border-bottom: 1px dotted #57575a; }
+.wwwInLineBox {
+  font-family: "Open Sans", sans-serif;
+  background-color: #e7e7e7;
+  padding: 15px;
+  margin: 20px 0; }
+  .wwwInLineBox h3 {
+    padding: 0 0 15px 0;
+    margin: 0 0 15px 0;
+    border-bottom: 1px dotted #57575a; }
 
-.ogfInLineBox { background-color: #e7e7e7; padding: 15px; margin: 20px 0; }
-.ogfInLineBox h3 { padding: 0 0 15px 0; margin: 0 0 15px 0; border-bottom: 1px dotted #57575a; }
+.ogfInLineBox {
+  background-color: #e7e7e7;
+  padding: 15px;
+  margin: 20px 0; }
+  .ogfInLineBox h3 {
+    padding: 0 0 15px 0;
+    margin: 0 0 15px 0;
+    border-bottom: 1px dotted #57575a; }
