--- a/spe_blog/templates/spe_blog/plugins/brief_interest_wide_single.html
+++ b/spe_blog/templates/spe_blog/plugins/brief_interest_wide_single.html
@@ -14,7 +14,7 @@
         <div class="story-wrap row">
         {% if article.picture and article.picture.url %}
 {#            <div class="col-xs-5 poipic" style="background-image: url({{ article.picture.url }})"></div>#}
-            <div class="col-xs-4"><img src="{{ article.picture.url }}" class="img-responsive poipicimg"/> </div>
+            <div class="col-xs-4 poipicimgdiv"><img src="{{ article.picture.url }}" class="poipicimg"/> </div>
         {% else %}
             <div class="col-xs-4 poipic"></div>
         {% endif %}
