--- a/spe_promotions/templates/spe_promotions/plugins/image_text_below.html
+++ b/spe_promotions/templates/spe_promotions/plugins/image_text_below.html
@@ -33,6 +33,7 @@
     <p class="well">{% trans "No items available" %}</p>
 {% endfor %}
 
-{% if show_all_url and show_all_text %}
-            <div class="row"><div class="col-xs-12 see-all-div"><a class="see-all" id="features" href="{{ show_all_url }}">{{ show_all_text }}<span></span><i class="fa fa-chevron-circle-right" aria-hidden="true"></i></a></div></div>
-{% endif %}
+
+    {% if more_url and more_text %}
+        <div class="row"><div class="col-xs-12 see-all-div-promo"><a class="see-all" id="features" href="{{ more_url }}">{{ more_text }}<span></span><i class="fa fa-chevron-circle-right" aria-hidden="true"></i></a></div></div>
+    {% endif %}
