--- a/spe_promotions/templates/spe_promotions/plugins/promotion_posts.html
+++ b/spe_promotions/templates/spe_promotions/plugins/promotion_posts.html
@@ -29,7 +29,7 @@
     {% endfor %}
 {#        <div class="row"><div class="col-xs-12 see-all-div">MORE WHOBIE</div></div>#}
         {% if more_url and more_text %}
-                    <div class="row morepromo"><div class="col-xs-12 see-all-div-promo"><a class="see-all" id="features" href="{{ more_url }}">{{ more_text }}<span></span><i class="fa fa-chevron-circle-right" aria-hidden="true"></i></a></div></div>
+                    <div class="morepromo row"><div class="col-xs-12 see-all-div-promo"><a class="see-all" id="features" href="{{ more_url }}">{{ more_text }}<span></span><i class="fa fa-chevron-circle-right" aria-hidden="true"></i></a></div></div>
         {% endif %}
     </div>
 {% endif %}
