promo style fix

--- a/mainsite/static/www/css/_tiles.scss
+++ b/mainsite/static/www/css/_tiles.scss
@@ -390,9 +390,8 @@
     }
   }
 }
-#myCarouselPromo {
-  @extend #myCarousel;
-  padding-bottom: 0;
+carouselPromo {
+  padding-bottom: 0 !important;
 }
 
 .eventsNearYou {
