--- a/spe_promotions/templates/spe_promotions/plugins/carousel.html
+++ b/spe_promotions/templates/spe_promotions/plugins/carousel.html
@@ -1,6 +1,6 @@
 {% load cms_tags sekizai_tags %}
 
-<div id="myCarouselPromo" class="carousel slide carousel-fade" data-ride="carousel" data-interval="10000">
+<div id="myCarousel" class="carousel slide carousel-fade carouselPromo" data-ride="carousel" data-interval="10000">
   <!-- Indicators -->
   <ol class="carousel-indicators">
   {% for promo in promos %}
