--- a/spe_promotions/templates/spe_promotions/plugins/image_text_below.html
+++ b/spe_promotions/templates/spe_promotions/plugins/image_text_below.html
@@ -33,7 +33,6 @@
     <p class="well">{% trans "No items available" %}</p>
 {% endfor %}
 
-
-    {% if more_url and more_text %}
-        <div class="row"><div class="col-xs-12 see-all-div-promo"><a class="see-all" id="features" href="{{ more_url }}">{{ more_text }}<span></span><i class="fa fa-chevron-circle-right" aria-hidden="true"></i></a></div></div>
-    {% endif %}
+{% if more_url and more_text %}
+    <div class="row morepromo"><div class="col-xs-12 see-all-div-carosel"><a class="see-all-promo" id="features" href="{{ more_url }}">{{ more_text }}<span></span><i class="fa fa-chevron-circle-right" aria-hidden="true"></i></a></div></div>
+{% endif %}
