--- a/mainsite/static/ogf/css/_vars.scss
+++ b/mainsite/static/ogf/css/_vars.scss
@@ -9,6 +9,10 @@ $col-copygrey:          #3d4044;
 $col-drkgrey:           #57575a;
 $col-basegrey:          grey;
 $col-boxshadow:         #b4b4b9;
+$col-darkgrey:          #37373a;
+$col-pagegrey:          #f1f2f7;
+$col-steelgrey:         #9c9fac;
+$col-sprlghtgry:        #e7e7e7;
 $col-ogfnotsolightgrey: #e4e1d8;
 $col-ogflightgrey:      #f2efea;
 $col-ogflightgrey2:     #f4f4f4;
