--- a/mainsite/static/www/css/_tiles.scss
+++ b/mainsite/static/www/css/_tiles.scss
@@ -171,7 +171,7 @@
       letter-spacing:   .01rem;
 
       a {
-        color:          $col-darkgrey;
+        //color:          $col-darkgrey;
 
         &:visited {
         outline:        0;
