--- a/mainsite/static/www/css/mainstyle.scss
+++ b/mainsite/static/www/css/mainstyle.scss
@@ -122,6 +122,7 @@ h4 {
   margin:             15px 0;
   padding:            10px 0 0 10px;
   border-top:         1px solid $col-steelgrey;
+  background-color:   $col-white;
 }
 .see-all {
   font-size:          15px;
@@ -148,7 +149,8 @@ h4 {
 .see-all-div-carosel {
   background-color:   $col-white;
   padding:            10px;
-  margin-bottom:      10px;
+  margin-bottom:      15px;
+  box-shadow:           0 1px 2px $col-boxshadow;
 }
 .see-all-div-promo {
   padding:            0 10px 10px 10px;
