JPT Footer link

--- a/mainsite/templates/include_jpt_footer.html
+++ b/mainsite/templates/include_jpt_footer.html
@@ -42,7 +42,7 @@
                         <p><a href="https://www.spe.org/en/jpt/beyond-headlines/">Beyond the Headlines</a></p>
                         <p><a href="https://www.spe.org/en/jpt/presidents-column/">President's Column</a></p>
                         <p><a href="https://www.spe.org/en/jpt/editor-comments/">Comments</a></p>
-                        <p><a href="https://www.spe.org/en/jpt/spe-member-news/">SPE News</a></p>
+                        <p><a href="https://www.spe.org/en/jpt/spe-news">SPE News</a></p>
                     </div>
                     <div class="col-xs-6 col-md-2">
                         <h3>UTILITY</h3>
