more carousel fixes

--- a/mainsite/static/jpt/css/_tiles.scss
+++ b/mainsite/static/jpt/css/_tiles.scss
@@ -495,6 +495,42 @@
     }
   }
 }
+.carousel {
+  .carousel-indicators {
+    bottom:             0;
+  }
+
+  .carousel-inner {
+    height:             400px;
+    //border:             1px solid hotpink;
+
+    .item {
+      height:             400px;
+      background-size:  cover;
+      background-position: center;
+
+      img {
+        width:          100%;
+        height:         auto;
+      }
+      .carousel-caption {
+        background:     $img-back-black-50 repeat top left fixed;
+        width:          100%;
+        //top:            200px;
+        bottom:         0;
+        left:           0;
+        padding-left:   10px;
+        padding-right:  10px;
+        padding-bottom: 30px;
+
+        h4 {
+          font-size:    16px;
+          font-weight:  400;
+        }
+      }
+    }
+  }
+}
 .eventsNearYou {
 
   .locCurrent {
