--- a/mainsite/static/twa/css/_content.scss
+++ b/mainsite/static/twa/css/_content.scss
@@ -616,7 +616,7 @@
   padding:              0;
 }
 .editorialcol {
-  padding:              0 0 0 10px;
+  padding:              10px 0 0 10px;
 }
 .featurecol {
   //overflow: hidden;
