--- a/mainsite/static/twa/css/_tiles.scss
+++ b/mainsite/static/twa/css/_tiles.scss
@@ -424,6 +424,42 @@
 .poiblurb {
   padding-left:         15px;
 }
+.carousel {
+  .carousel-indicators {
+    bottom:             0;
+  }
+
+  .carousel-inner {
+    height:             400px;
+    //border:             1px solid hotpink;
+
+    .item {
+      height:             400px;
+      background-size:  cover;
+      background-position: center;
+
+      img {
+        width:          100%;
+        height:         auto;
+      }
+      .carousel-caption {
+        background:     $img-back-black-50 repeat top left fixed;
+        width:          100%;
+        //top:            200px;
+        bottom:         0;
+        left:           0;
+        padding-left:   10px;
+        padding-right:  10px;
+        padding-bottom: 30px;
+
+        h4 {
+          font-size:    16px;
+          font-weight:  400;
+        }
+      }
+    }
+  }
+}
 #myCarousel {
   .carousel-indicators {
     bottom:             0;
@@ -453,6 +489,7 @@
     }
   }
 }
+
 .eventsNearYou {
 
   .locCurrent {
