--- a/mainsite/templates/include_ogf_footer.html
+++ b/mainsite/templates/include_ogf_footer.html
@@ -21,10 +21,10 @@
             </div>
             <div class="col-md-3">
                 <h3>DEPARTMENTS</h3>
-                <p><a href="/en/ogf/pfc-director/">From the PFC Technical Director</a></p>
+                <p><a href="/en/ogf/pfc-director/">From the Production & Facilities Technical Director</a></p>
                 <p><a href="/en/ogf/culture-matters/">Culture Matters</a></p>
                 <p><a href="/en/ogf/global-market-trends/">Global Market Trends</a></p>
-                <p><a href="/en/ogf/pfc-roundup/">PFC Roundup</a></p>
+                <p><a href="https://www.spe.org/en/ogf/in-focus/">In Focus</a></p>
                 <p><a href="/en/ogf/technology-marketplace/">Technology Marketplace</a></p>
 {#                <p><a>Calendar</a></p>#}
                 <p><a href="/en/ogf/peer-reviewed-papers/">Peer-Reviewed Papers</a></p>
